--- a/style.css
+++ b/style.css
@@ -1,4 +1,15 @@
 body {
-    font-family: Arial, Helvetica, sans-serif; 
+    font-family: Arial, Helvetica, sans-serif;
     font-size:larger;
+    color: aliceblue;
+
+    min-height: 100vh;
+    display:flex;
+    justify-content: center;
+    align-items: center;
     background-color: rgb(161, 161, 255);}
+
+
+h1{
+    font-size: 20vw;
+ }
