--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Host+Grotesk:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=VT323&display=swap');
+
+
+
+
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Host Grotesk";
     font-size:larger;
-    color: aliceblue;
+    color:white;
 
     min-height: 100vh;
     display:flex;
@@ -12,4 +17,5 @@ body {
 
 h1{
     font-size: 20vw;
+    
  }
