--- a/style.css
+++ b/style.css
@@ -12,10 +12,15 @@ body {
     display:flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     background-color: rgb(161, 161, 255);}
 
 
 h1{
     font-size: 20vw;
     
+ }
+
+ a {
+    color: inherit;
  }
