--- a/style.css
+++ b/style.css
@@ -5,22 +5,39 @@
 
 body {
     font-family: "Host Grotesk";
-    font-size:larger;
-    color:white;
+    font-size:small;
+    color:rgb(0, 0, 0);
 
-    min-height: 100vh;
+    min-height: 10vh;
     display:flex;
     justify-content: center;
-    align-items: center;
+    align-items:center;
     flex-direction: column;
-    background-color: rgb(161, 161, 255);}
+    background-color: rgb(121, 0, 0);
+} 
 
+#main {
+    max-width: 55rem;
+}
 
-h1{
-    font-size: 20vw;
+p {
+    font-size: 1vw;
     
  }
 
+h1{
+    font-size: 12vw;
+ }
+
+ h2{
+    font-size: 5vw;
+    align-items:end;
+ }
+
  a {
-    color: inherit;
+    font-size: large;
+    color: rgb(0, 0, 0);
+ }
+ img {
+    max-width: 87%;
  }
